log
Thu 04 May 2023 01:48:28 PM UTC: 
 tests:  0|5
total_score: 0/70
07333b1
Thu 04 May 2023 02:49:10 PM UTC: 
 sudoku.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
79f57f1
Thu 04 May 2023 02:49:34 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
7814628
Thu 04 May 2023 03:33:04 PM UTC: 
 sudoku.c | 24 +++++++++++++++++++++---
 1 file changed, 21 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:55:9: error: unused variable ‘j’ [-Werror=unused-variable]
   55 |   int i,j;
      |         ^
sudoku.c: In function ‘iniciarArray’:
sudoku.c:50:15: error: array subscript 10 is outside array bounds of ‘int[10]’ [-Werror=array-bounds]
   50 |   return array[10];
      |          ~~~~~^~~~
sudoku.c:46:22: note: while referencing ‘array’
   46 | int iniciarArray(int array[10])
      |                  ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f19d5fe
Thu 04 May 2023 03:37:10 PM UTC: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘iniciarArray’:
sudoku.c:50:15: error: array subscript 10 is outside array bounds of ‘int[10]’ [-Werror=array-bounds]
   50 |   return array[10];
      |          ~~~~~^~~~
sudoku.c:46:22: note: while referencing ‘array’
   46 | int iniciarArray(int array[10])
      |                  ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
14416d5
Thu 04 May 2023 03:37:23 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘iniciarArray’:
sudoku.c:50:10: error: returning ‘int *’ from a function with return type ‘int’ makes integer from pointer without a cast [-Werror=int-conversion]
   50 |   return array;
      |          ^~~~~
cc1: all warnings being treated as errors
Compilation failed
ef50167
Thu 04 May 2023 03:37:33 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
794c82d
Fri 05 May 2023 12:23:28 PM UTC: 
 sudoku.c | 24 ++++++++++++++----------
 1 file changed, 14 insertions(+), 10 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:56:34: error: unused variable ‘subMatriz’ [-Werror=unused-variable]
   56 |   int filas[10] , columnas[10] , subMatriz[10];
      |                                  ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f729f06
Fri 05 May 2023 12:32:43 PM UTC: 
 sudoku.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:88:35: error: array subscript 9 is above array bounds of ‘int[9]’ [-Werror=array-bounds]
   88 |               int num = n->sudo[i][j];
      |                         ~~~~~~~~~~^~~
sudoku.c:7:8: note: while referencing ‘sudo’
    7 |    int sudo[9][9];
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
6807c1b
Fri 05 May 2023 12:34:51 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
7cbcc4a
Fri 05 May 2023 12:42:27 PM UTC: 
 sudoku.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|0
9d4a517
Fri 05 May 2023 12:42:51 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
38a4f71
